--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,12 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+
+.prop {
+  font-size: 20px;
+  font-weight: 100px;
+}
+
+.description p {
+  font-size: 20px;
+}
